[front] feat: (WIP) replace sliders by buttons on mobile
