# frontend/scripts/openapi.yaml
@@ -1383,6 +1383,49 @@ paths:
               schema:
                 $ref: '#/components/schemas/ComparisonUpdate'
           description: ''
+    patch:
+      operationId: users_me_comparisons_partial_update
+      description: Partially update a comparison made by the logged user, in the given
+        poll.
+      parameters:
+      - in: path
+        name: poll_name
+        schema:
+          type: string
+        required: true
+      - in: path
+        name: uid_a
+        schema:
+          type: string
+        required: true
+      - in: path
+        name: uid_b
+        schema:
+          type: string
+        required: true
+      tags:
+      - users
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PatchedComparisonUpdateRequest'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/PatchedComparisonUpdateRequest'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/PatchedComparisonUpdateRequest'
+      security:
+      - oauth2:
+        - read write groups
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ComparisonUpdate'
+          description: ''
     delete:
       operationId: users_me_comparisons_destroy
       description: Delete a comparison made by the logged user, in the given poll
@@ -3338,12 +3381,12 @@ components:
         * `candidate_fr_2022` - Candidate (FR 2022)
     EventTypeEnum:
       enum:
-      - live
       - talk
+      - live
       type: string
       description: |-
-        * `live` - Tournesol Live
         * `talk` - Tournesol Talk
+        * `live` - Tournesol Live
     ExtendedCollectiveRating:
       type: object
       properties:
@@ -3842,6 +3885,25 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/VideoSerializerWithCriteria'
+    PatchedComparisonUpdateRequest:
+      type: object
+      description: |-
+        A comparison serializer used only for updates.
+
+        Given the context determined by the view, it will represent or save the
+        comparison in the reverse order.
+
+        Use `ComparisonSerializer` for all other operations.
+      properties:
+        criteria_scores:
+          type: array
+          items:
+            $ref: '#/components/schemas/ComparisonCriteriaScoreRequest'
+        duration_ms:
+          type: number
+          format: double
+          nullable: true
+          description: Time it took to rate the videos (in milliseconds)
     PatchedContributorRatingRequest:
       type: object
       properties:
